FMS-28: Fixing some layout issues

--- a/src/app/dashboards/components/cards/fuel-availability-chart-report/fuel-availability-chart-report.component.scss
+++ b/src/app/dashboards/components/cards/fuel-availability-chart-report/fuel-availability-chart-report.component.scss
@@ -16,5 +16,5 @@
     }
 }
 .chart-content {
-    height: 220px;
+    height: 216px;
 }
